# Kingdomino

./: README.md  Toy_game_kingdomino.ipynb  pyproject.toml  requirement.yml
kingdomino/: __init__.py  test.py
old_src/lib/: colors.py  games_2.py  players.py  players_2.py
src/: Kingdomino.ipynb  main.py  main_2.py
src/lib/: KingdominoEnv.py  KingdominoEnv_corrected.py  KingdominoEnv_corrected_2.py  agent.py  board.py  colors.py  deck.py  dominos.py  games.py  games_2.py  grid.py  grid2.py  player.py  players.py  players_2.py  tiles.py  utils_func.py
